Change Text color

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body{
 	line-height: 200px;
 	font-weight: bold;
 	font-size: 42px;
-	color: #fff;
+	color: #eee;
 	cursor: pointer;
 	opacity: 0.9;
 	box-shadow: 0 10px 0 #227f99;
